added feature to pass view centroid from flask to javascript openlayers
Still working on passing geojson from flask to javascript and loading as layer on map

--- a/openlayers_test/templates/map_example.html
+++ b/openlayers_test/templates/map_example.html
@@ -24,10 +24,29 @@
           })
         ],
         view: new ol.View({
-          center: ol.proj.fromLonLat([37.41, 8.82]),
+          center: ol.proj.fromLonLat({{data_centroid}}),
           zoom: 4
         })
       });
+
+
+    const parsed_complaints = {{cb3_complaints|tojson}}
+    var vectorLayer = new ol.source.Vector({
+        source: new ol.source.GeoJSON({
+          url: 'parsed_complaints',
+          format: new ol.format.GeoJSON()
+        })
+      });
+      console.log(parsed_complaints)
+
+      // Add Vector layer to map
+     map.addLayer(vectorLayer);
+
+
+});
+
+
+
     </script>
   </body>
 </html>
